--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- resume -->
   <link rel="stylesheet" href="css/resume.css">
   <!-- mystyle -->
-  <link rel="stylesheet" href="css/mystyle.css">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body id="page-top">
@@ -206,87 +206,117 @@
         <div class="row">
           <div class="col-sm-3 my-4">
             <div class="card hidden">
-              <a href="http://220.128.133.15/s1080402/San'sLogic/">
+              <a href="http://220.128.133.15/s1080402/San'sLogic/" target="_blank">
                 <img src="images/San'sLogic.jpg" title="San'sLogic" alt="San'sLogic" class="pro_ho" id="fa_img_SansLogic">
-                <span class="pro_pop text-center pop_text" id="fa_txt_SansLogic">神邏輯公仔品牌形象網站。</span>
+                <p class="pro_pop text-center pop_text" id="fa_txt_SansLogic" >
+                  <span>神邏輯公仔品牌形象網站。</span> 
+                  <span class="tag_c">JavaScript</span><span class="tag_c">JQuery</span>
+                  <span class="tag_c">AJAX</span><span class="tag_c">MySQL</span><span class="tag_c">PHP</span>
+                </p>
               </a>
             </div>
           </div>
           <div class="col-sm-3 my-4">
             <div class="card hidden" >
-              <a href="https://vvin55318.github.io/JS_StoryGame/index">
+              <a href="https://vvin55318.github.io/JS_StoryGame/index" target="_blank">
                 <img src="images/JS_StoryGame.jpg" title="JS_StoryGame" alt="JS_StoryGame" class="pro_ho" id="fa_img_StoryGame">
-                <span class="pro_pop text-center pop_text" id="fa_txt_StoryGame">是非題小遊戲</span>
+                <p class="pro_pop text-center pop_text" id="fa_txt_StoryGame">
+                  <span>是非題小遊戲</span>  
+                  <span class="tag_c">JavaScript</span>
+                </p>
               </a>
             </div>
           </div>
           <div class="col-sm-3 my-4">
             <div class="card hidden">
-              <a href="https://vvin55318.github.io/JS_ColorPicker/index">
+              <a href="https://vvin55318.github.io/JS_ColorPicker/index" target="_blank">
                 <img src="images/JS_ColorPicker.jpg" title="JS_ColorPicker" alt="JS_ColorPicker" class="pro_ho" id="fa_img_ColorPicker">
-                <span class="pro_pop text-center pop_text" id="fa_txt_ColorPicker">調色盤</span>
+                <p class="pro_pop text-center pop_text" id="fa_txt_ColorPicker">
+                  <span>調色盤</span> 
+                  <span class="tag_c">JavaScript</span>
+                </p>
               </a>
             </div>
           </div>
-          <div class="col-sm-3 my-4">
+          <!-- <div class="col-sm-3 my-4">
             <div class="card hidden">
-              <a href="https://vvin55318.github.io/JS_AnalogClock/index">
+              <a href="https://vvin55318.github.io/JS_AnalogClock/index" target="_blank">
                 <img src="images/JS_AnalogClock.jpg" title="JS_AnalogClock" alt="JS_AnalogClock" class="pro_ho" id="fa_img_AnalogClock">
-                <span class="pro_pop text-center pop_text" id="fa_txt_AnalogClock">類比時鐘</span>
+                <p class="pro_pop text-center pop_text" id="fa_txt_AnalogClock">
+                  <span>類比時鐘</span>
+                  <span>JavaScript</span>
+                </p>
               </a>
             </div>
-          </div>
+          </div> -->
           <div class="col-sm-3 my-4">
             <div class="card hidden">
-              <a href="https://vvin55318.github.io/JS_DigitalClock/index">
+              <a href="https://vvin55318.github.io/JS_DigitalClock/index" target="_blank">
                 <img src="images/JS_DigitalClock.jpg" title="JS_DigitalClock" alt="JS_DigitalClock" class="pro_ho" id="fa_img_DigitalClock">
-                <span class="pro_pop text-center pop_text" id="fa_txt_DigitalClock">電子時鐘</span>
+                <p class="pro_pop text-center pop_text" id="fa_txt_DigitalClock">
+                  <span>電子時鐘</span>
+                  <span class="tag_c">JavaScript</span>
+                </p>
               </a>
             </div>
           </div>
           <div class="col-sm-3 my-4">
             <div class="card hidden">
-              <a href="https://vvin55318.github.io/JS_OpenAPI/index">
+              <a href="https://vvin55318.github.io/JS_OpenAPI/index" target="_blank">
                 <img src="images/JS_OpenAPI.jpg" title="JS_OpenAPI" alt="JS_OpenAPI" class="pro_ho" id="fa_img_OpenAPI">
-                <span class="pro_pop text-center pop_text" id="fa_txt_OpenAPI">ubike查詢</span>
+                <p class="pro_pop text-center pop_text" id="fa_txt_OpenAPI">
+                  <span>ubike查詢</span>
+                  <span class="tag_c">JavaScript</span><span class="tag_c">JQuery</span>
+                  <span class="tag_c">AJAX</span><span class="tag_c">MySQL</span><span class="tag_c">PHP</span>
+                </p>
               </a>
             </div>
           </div>
           <div class="col-sm-3 my-4">
             <div class="card hidden">
-              <a href="https://vvin55318.github.io/JavaScript-Drum-Kit/index">
+              <a href="https://vvin55318.github.io/JavaScript-Drum-Kit/index" target="_blank">
                 <img src="images/JS_padController.jpg" title="JS_padController" alt="JS_padController" class="pro_ho" id="fa_img_padController">
-                <span class="pro_pop text-center pop_text" id="fa_txt_padController">鼓聲打擊墊</span>
+                <p class="pro_pop text-center pop_text" id="fa_txt_padController">
+                  <span>鼓聲打擊墊</span>
+                  <span class="tag_c">JavaScript</span>
+                </p>
               </a>
             </div>
           </div>
 
           <div class="col-sm-3 my-4">
             <div class="card hidden">
-              <a href="https://vvin55318.github.io/JS_WhacAMole/index">
+              <a href="https://vvin55318.github.io/JS_WhacAMole/index" target="_blank">
                 <img src="images/JS_WhacAMole.jpg" title="JS_WhacAMole" alt="JS_WhacAMole" class="pro_ho" id="fa_img_WhacAMole">
-                <span class="pro_pop text-center pop_text" id="fa_txt_WhacAMole">打地鼠遊戲</span>
+                <p class="pro_pop text-center pop_text" id="fa_txt_WhacAMole">
+                  <span>打地鼠遊戲</span>
+                  <span class="tag_c">JavaScript</span>
+                </p>
               </a>
             </div>
           </div>
-
           <div class="col-sm-3 my-4">
             <div class="card hidden">
-              <a href="http://line.me/ti/p/@869tjxux">
+              <a href="http://line.me/ti/p/@869tjxux" target="_blank">
                 <img src="images/LineWeatherBot.png" title="LineWeatherBot" alt="LineWeatherBot" class="pro_ho" id="fa_img_LineWeatherBot">
-                <span class="pro_pop text-center pop_text" id="fa_txt_LineWeatherBot">Line天氣機器人</span>
+                <p class="pro_pop text-center pop_text" id="fa_txt_LineWeatherBot">
+                  <span>台灣各縣市Line天氣機器人</span>
+                  <span class="tag_c">node.js</span>
+                </p>
               </a>
             </div>
           </div>
           <div class="col-sm-3 my-4">
             <div class="card hidden">
-              <a href="https://vvin55318.github.io/MaskMap/dist/index.html">
+              <a href="https://vvin55318.github.io/MaskMap/dist/index.html" target="_blank">
                 <img src="images/MaskMap.jpg" title="LineWeatherBot" alt="MaskMap" class="pro_ho" id="fa_img_MaskMap">
-                <span class="pro_pop text-center pop_text" id="fa_txt_MaskMap">口罩地圖</span>
+                <p class="pro_pop text-center pop_text" id="fa_txt_MaskMap" >
+                  <span>口罩地圖</span>
+                  <span class="tag_c">Vue.js</span>
+                </p>
               </a>
             </div>
           </div>
-
         </div>
     </section>
 
