--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
           </div>
           <div class="col-sm-3 my-4">
             <div class="card hidden">
-              <a href="https://vvin55318.github.io/JS_OpenAPI/index" target="_blank">
+              <a href="http://220.128.133.15/s1080402/06_JS_OpenAPI/" target="_blank">
                 <img src="images/JS_OpenAPI.jpg" title="JS_OpenAPI" alt="JS_OpenAPI" class="pro_ho" id="fa_img_OpenAPI">
                 <p class="pro_pop text-center pop_text" id="fa_txt_OpenAPI">
                   <span>ubike查詢</span>
