--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
               <a href="http://line.me/ti/p/@869tjxux" target="_blank">
                 <img src="images/LineWeatherBot.png" title="LineWeatherBot" alt="LineWeatherBot" class="pro_ho" id="fa_img_LineWeatherBot">
                 <p class="pro_pop text-center pop_text" id="fa_txt_LineWeatherBot">
-                  <span>台灣各縣市Line天氣機器人</span>
+                  <span>Line天氣機器人</span>
                   <span class="tag_c">node.js</span>
                 </p>
               </a>
