--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             <h3 class="mb-0">泰山職訓中心</h3>
             <div class="subheading mb-3">前端網頁技術班</div>
             <p>
-              為期三個半月的職前訓練課程，在其中學習了HTML、CSS、JavaScript、JQuery、Boostrap、Vue.js等前端技術，以及PHP、MySQL等候端技術，並且會使用Photoshop和Illustrator等設計軟體。
+              在期間學習了 Boostrap、JavaScript、JQuery、Vue.js 等前端技術，以及 PHP 等後端技術，並會使用 PS 和 AI 等設計軟體。
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -216,7 +216,7 @@
               </a>
             </div>
           </div>
-          <div class="col-sm-3 my-4">
+          <!-- <div class="col-sm-3 my-4">
             <div class="card hidden" >
               <a href="https://vvin55318.github.io/JS_StoryGame/index" target="_blank">
                 <img src="images/JS_StoryGame.jpg" title="JS_StoryGame" alt="JS_StoryGame" class="pro_ho" id="fa_img_StoryGame">
@@ -226,7 +226,7 @@
                 </p>
               </a>
             </div>
-          </div>
+          </div> -->
           <div class="col-sm-3 my-4">
             <div class="card hidden">
               <a href="https://vvin55318.github.io/JS_ColorPicker/index" target="_blank">
