--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
-            <h3 class="mb-0">泰山職訓中心</h3>
+            <h3 class="mb-0">職訓中心</h3>
             <div class="subheading mb-3">前端網頁技術班</div>
             <p>
               在期間學習了 Boostrap、JavaScript、JQuery、Vue.js 等前端技術，以及 PHP 等後端技術，並會使用 PS 和 AI 等設計軟體。
