--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="home">
       <div class="w-100">
         <h1 class="mb-0">Hsieh
-          <span class="text-primary">wneyen</span>
+          <span class="text-primary">wenyen</span>
         </h1>
         <div class="subheading mb-5">
           <p>謝文硯</p>
